--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -1,20 +1,18 @@
 {
   "name": "Focusly",
   "short_name": "Focusly",
-  "description": "Focusly is a minimal and effective productivity app that helps you stay focused on your tasks, track your sessions, and improve concentration with daily motivational thoughts.",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f6f1e9",
   "theme_color": "#6c63ff",
-  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
