--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Focusly",
   "short_name": "Focusly",
-  "description": "Focusly helps you stay focused with timer-based sessions and motivational thoughts.",
-  "start_url": "./index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#f6f1e9",
   "theme_color": "#6c63ff",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
